# vivisect

./: .bumpversion.cfg  .coveragerc  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  COPYRIGHT  MIGRATING.md  README  README.md  TESTING.md  py3kill.txt  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_doc.txt  setup.py  vdbbin  vivbin
.circleci/: config.yml
.github/workflows/: style.yml
Elf/: __init__.py  elf_lookup.py
PE/: __init__.py  carve.py  clr.py  coff.py  cofflib.py  petool.py
PE/ordlookup/: __init__.py  comctl32.py  mfc42.py  msvbvm60.py  oledlg.py  printord.py
PE/tests/: test_repr.py  test_version.py
PE/tools/: printord.py  structdump.py
attic/PE/: __init__.py  carve.py  cofflib.py
attic/cobra/: cache.py  cluster.py  http.py  remoteapp.py
attic/envi/: __init__.py  bits.py  bytesig.py  cli.py  expression.py  memory.py  pagelookup.py  radixtree.py  registers.py
attic/vdb/: release.py  renderers.py
attic/visgraph/: dbcore.py  exc.py  graphcore.py
attic/vivisect/: base.py  colormap.py  vector.py
attic/vqt/: application.py  basics.py  cli.py  hotkeys.py  qpython.py
attic/vstruct/: bitfield.py  builder.py  primitives.py
attic/vtrace/: __init__.py  audit.py  breakpoints.py  const.py  envitools.py  rmi.py  snapshot.py  util.py
cobra/: __init__.py  cache.py  cluster.py  dcode.py  devent.py  dispatcher.py  http.py  hxxp.py  pool.py  py3compat.py  remoteapp.py
cobra/auth/: shadowfile.py
cobra/hostid/: __init__.py
cobra/tests/: __init__.py  testbasic.py  testcache.py  testdcode.py  testevents.py  testnewobj.py  tests_advanced.py
cobra/tools/: burnapp.py  queend.py  runtests.py  workerd.py
docs/: conf.py  index.rst
docs/vivisect/: devguides.rst  extensions.rst  intro.rst  quickstart.rst  remote.rst  scripting.rst
envi/: __init__.py  bintree.py  bits.py  bytesig.py  cli.py  codeflow.py  common.py  config.py  const.py  debuginfo.py  encoding.py  exc.py  expression.py  ieee754.py  interactive.py  memory.py  pagelookup.py  pyzip.py  radixtree.py  registers.py  resolver.py  tests_memory.py  threads.py
envi/archs/: __init__.py
envi/memcanvas/: __init__.py
envi/qt/: config.py  html.py  jquery.py  memcanvas.py  memdump.py  memory.py  memorymap.py  memsearch.py  memwrite.py
envi/symstore/: resolver.py  symcache.py
envi/tests/: __init__.py  aarch64.bigend.mpk  aarch64_data.py  arm_bit_test_adds.py  arm_bit_test_cmn.py  arm_bit_test_cmp.py  arm_bit_test_subs.py  armthumb_tests.py  ppc_embedded_emutests.py  ppc_embedded_instructions.py  ppc_server_emutests.py  ppc_vle_emutests.py  ppc_vle_instructions.py  test_arch_aarch64.py  test_arch_amd64.py  test_arch_amd64_emu.py  test_arch_arm.py  test_arch_arm_cmp_flags.py  test_arch_dotnet.py  test_arch_h8.py  test_arch_i386.py  test_arch_mips.py  (+20 more)
scripts/: pedump.py  pedump_classes.py
synapse/: __init__.py  client.py  server.py
vdb/: __init__.py  release.py  renderers.py  unittest.py  vdbbin.py
vertex/: graph.py  model.py
visgraph/: __init__.py  cli.py  dbcore.py  exc.py  graphcore.py  pathcore.py
vivisect/: __init__.py  analysis.py  base.py  cli.py  codegraph.py  colormap.py  const.py  defconfig.py  emutils.py  exc.py  vdbext.py  vector.py  vivbin.py  vivstor.py  workspace.py
vqt/: application.py  basics.py  cli.py  colors.py  common.py  hotkeys.py  main.py  menubuilder.py  qpython.py  saveable.py  shortcut.py  tree.py
vstruct/: __init__.py  bitfield.py  builder.py  cparse.py  primitives.py
vtrace/: __init__.py  audit.py  breakpoints.py  const.py  envitools.py  exc.py  lockstep.py  notifiers.py  qt.py  rmi.py  snapshot.py  util.py  watchpoints.py
(+770 files in other folders)
