[build-system]
requires = ['setuptools>=68.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'vivisect'
version = '1.3.0'
authors = [
    { name =  'The Vivisect Peeps', email = 'vivdevs@r4780y.com'}
]
description = 'Pure python disassembler, debugger, emulator, and static analysis framework'
readme = 'README.md'
requires-python = '>=3.8'
license = { text = 'Apache License 2.0' }
classifiers = [
    'Topic :: Security',
    'Topic :: Software Development :: Disassemblers',
    'Topic :: Software Development :: Debuggers',
    'Programming Language :: Python :: 3.8',
    'License :: OSI Approved :: Apache Software License',
]

dependencies = [
    'pyasn1>=0.5.0,<0.6.0',
    'pyasn1-modules>=0.3.0,<0.4.0',
    'cxxfilt>=0.3.0,<0.4.0',
    'msgpack>=1.0.0,<2.0.0',
    'pycparser>=2.20',
]

[project.urls]
Homepage = 'https://vivisect.readthedocs.io/en/latest/'
Documentation = 'https://vivisect.readthedocs.io/en/latest/'
Repository = 'https://github.com/vivisect/vivisect'
Changelog = 'https://vivisect.readthedocs.io/en/latest/vivisect/changelog.html'

[project.optional-dependencies]
dev = [
    'bump2version>=1.0.0,<1.1.0'
]

docs = [
    'sphinx>=7.1.0,<7.2.0',
    'sphinx-rtd-theme>=1.2.0,<1.3.0',
]

gui = [
    # TODO: PyQT6 is out, but that's a beast that deserves its own PR.
    'pyqt5==5.15.7',
    'pyqtwebengine==5.15.6',
]

[project.scripts]
vivbin = 'vivisect.vivbin:main'
vdbbin = 'vdb.vdbbin:main'
vivserver = 'vivisect.remote.server:main'

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
'*' = ['*.dll', '*.dylib', '*.lyt', 'Makefile', '*.c', '*.h', '*.yes', '*.sh']

[tool.setuptools.packages.find]
include = ['vivisect*', 'vtrace*', 'envi*', 'PE*', 'Elf*', 'vdb*', 'visgraph*', 'vstruct*', 'vqt*', 'cobra*']
